# marvin

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pypirc.template  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  REFACTORING.md  RELEASING.md  check_code.sh  demo_quality_report.json  github_issues_roadmap.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  quality_report.json  requirements.txt  setup.py  sitemap.xml
.github/: GITHUB_METADATA.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  docs.yml  publish.yml  release.yml
DOCUMENTATION_STATE_TRACKER/: index.html
PRD/: index.html
STATE_TRACKER/: index.html
ai-docs/: adk-rules.md  google-adk.md
docs/: DOCUMENTATION_STATE_TRACKER.md  PRD.md  README.md  ROADMAP_v0.2.0.md  STATE_TRACKER.md  TDD_100_COVERAGE_PLAN.md  TDD_BEST_PRACTICES.md  TDD_IMPLEMENTATION_SUMMARY.md  TEST_IMPLEMENTATION_GUIDE.md  index.md
docs/case-studies/: before-after-comparison.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: ai-coding-improvements.md  writing-effective-prds.md
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
docs/use-cases/: api-development.md  index.md  startup-mvp.md
docs/user-guide/: cli-usage.md  processing-prds.md  templates.md
examples/: sample_prd.md
examples/prd/: example_prd.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
includes/abbreviations/: index.html
javascripts/: extra.js
scripts/: bump_version.py  check_test_exists.py  demo_quality_verification.py  verify_quality.py
search/: search_index.json
src/marvin/: __init__.py  __main__.py  api.py  cli.py  config.py  logging.py  py.typed
src/marvin/adapters/: __init__.py
src/marvin/adapters/adk_agents/: __init__.py  document_analyzer_adk.py  marvin_orchestrator_adk.py  sequence_planner_adk.py
src/marvin/adapters/api/: __init__.py  server.py
src/marvin/adapters/cli/: __init__.py  commands.py
src/marvin/adapters/mcp/: __init__.py  server.py
src/marvin/agents/: __init__.py  base.py  codebase_scanner.py  main_agent.py  prd_analysis.py  sequence_planner.py  template_generator.py
src/marvin/core/: __init__.py
src/marvin/core/agents/: __init__.py  base.py  codebase_analysis.py  document_analysis.py  sequence_planner.py  template_generation.py
src/marvin/core/application/: __init__.py  process_prd_use_case.py
src/marvin/core/domain/: __init__.py  models.py
src/marvin/core/domain/entities/: __init__.py  analysis.py  codebase.py  prd.py  task.py
src/marvin/core/domain/services/: __init__.py  codebase_scanner.py  prd_analyzer.py  task_sequencer.py  template_generator.py
src/marvin/core/domain/value_objects/: __init__.py  task_priority.py  time_estimate.py  xml_template.py
src/marvin/core/use_cases/: generate_templates.py
src/marvin/infrastructure/: __init__.py
src/marvin/infrastructure/ai/: __init__.py  ai_service.py  gemini_client.py
src/marvin/infrastructure/template_generator/: __init__.py  xml_generator.py
templates/: coding_task_template_v2.xml  template_usage_guide.md
tests/: conftest.py
tests/integration/: test_prd_to_template_flow.py
tests/unit/: test_adk_agents.py  test_document_analysis.py  test_document_analysis_agent.py  test_domain_models.py  test_enhanced_markdown_parser.py  test_quality_verification.py  test_xml_generator.py
user-guide/cli-usage/: index.html
user-guide/processing-prds/: index.html
user-guide/templates/: index.html
