[tool.poetry]
name = "marvin"
version = "0.1.0"
description = "Ein intelligentes Tool zur Umwandlung von PRDs in strukturierte AI-Coding-Tasks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "marvin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
typer = "^0.9.0"
pydantic = "^2.6.0"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.0"
google-adk = "^0.1.0"  # Placeholder für Google's ADK
context7 = "^0.1.0"    # Placeholder für Context7
rich = "^13.7.0"
langchain = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
marvin = "marvin.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
