[project]
name = "marvin"
version = "0.1.0"
description = "An intelligent tool for converting PRDs into structured AI-Coding-Tasks"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "typer>=0.15.3",
    "pydantic>=2.11.4",
    "lxml>=5.4.0",
    "beautifulsoup4>=4.13.4",
    "google-adk>=0.4.0",
    "rich>=14.0.0",
    "langchain>=0.3.25",
    "PyYAML>=6.0.2",
    "websockets>=15.0.1",
    "loguru>=0.7.3",
    "types-pyyaml>=6.0.12.20250402",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.4",
]

[project.scripts]
marvin = "marvin.cli:app"

[build-system]
requires = ["setuptools>=68.2.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
